# gaussianutility

./: LICENSE  README.md  pyproject.toml  setup.py
gaussianutility/: com2vasp  com2vasp.py  com2xyz  com2xyz.py  command.py  exgeom.py  freezeLayer  freezeLayer.py  freezeLow  genFeat.py  gibbsTemp  gibbsTemp.py  inputSort.py  old_xgeom.py  oniomSort.py  out2com  out2com.py  out2xyz  out2xyz.py  pathFeature  pathFeature.py  path_feature.py  printE  printE.py  sortInput  sortInput.py  spectrum  spectrum.py  utilities.py  utils.py  vasp2com  vasp2com.py  xgeom.py  xyz2com.py
gaussianutility.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
recyclebin/: extract_geom.py  freezeLow.py  freeze_low.py  removed_from_utils.py
test/: 3trimerPrism.SiAl.com  3trimerPrism.SiAl.geom.com  3trimerPrism.SiAl.xyz  42_CID_6535_Triethyl_phosphate.out  4tetramerPrism.SiAl.geom.com  4tetramerPrism.SiAl.test.xyz  5pentamerPrism.SiAl.geom.com  5pentamerPrism.SiAl.out  6hexamerPrism.SiAl.geom.com  6hexamerPrism.SiAl.out  7heptamerPrism.SiAl.geom.com  7heptamerPrism.SiAl.out  8octamerPrism.SiAl.geom.com  com2vasp_ZSM5.com  com2xyz_EtOH.com  freezeLayer_FAU_oniom3.com  gibbsTemp_SiAl_trigonal_prism.out  out2com_Ru13X_oniom3.out  sortInput_FAU_oniom3.com  spectrum_ir_Urate1.out  spectrum_ir_Urate2.out  spectrum_uv_Theophylline1.out  spectrum_uv_Theophylline2.out  test.xyz  vasp2com_ZSM5.com  vasp2com_ZSM5.vasp  xyz2com_EtOH.xyz
