[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gaussianutility"
version = "0.1.1"
authors = [{name="Sungil Hong", email="suh33@pitt.edu"}]
description = "Useful utilities to use Gaussian09/16 software"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



